force-app/main/default/objects/Notification_Log__c/fields/Merchant__c.field-meta.xml
<CustomField>
    <fullName>Merchant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Merchant</label>
    <referenceTo>Merchant__c</referenceTo>
    <relationshipLabel>Notification Logs</relationshipLabel>
    <relationshipName>Notification_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>