force-app/main/default/objects/Notification_Log__c/fields/Notification_Type__c.field-meta.xml
<CustomField>
    <fullName>Notification_Type__c</fullName>
    <label>Notification Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Payment Reminder</fullName>
            </value>
            <value>
                <fullName>Failure Alert</fullName>
            </value>
            <value>
                <fullName>Fraud Flag</fullName>
            </value>
            <value>
                <fullName>Dispute Update</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>